# strate-go

./: .bazelrc  .gitignore  BUILD.bazel  Jenkinsfile  MODULE.bazel  README.md  WORKSPACE.bzlmod  go.mod  go.sum  main.go
api/: .gitignore
api/proto/: BUILD.bazel  strate.proto  strate.v1.proto
api/proto/game/: game.proto
cmd/: BUILD.bazel  play.go  root.go  serve.go
deploy/: deployment.template.yaml
internal/: BUILD.bazel  strate.go
internal/core/: BUILD.bazel  attack.go  attack_test.go  player.go
internal/errors/: BUILD.bazel  game_errors.go
internal/game/: BUILD.bazel  board.go  board_random.go  board_standard.go  board_test.go  game.go  game_mode.go  game_player.go  game_test.go  move.go  move_result.go  move_serializer.go  move_serializer_test.go
internal/pieces/: BUILD.bazel  bomb.go  bomb_test.go  colors.go  piece.go  piece_test.go  pieces.go  pieces_test.go  rank.go  standard.go  standard_test.go
internal/storage/: BUILD.bazel  data.go  keys.go  redis.go  ttl_cache.go
internal/util/: BUILD.bazel  base_board.go  generate_pieces.go  generate_pieces_test.go  id.go  maps.go  random_board.go
internal/web/: BUILD.bazel  logging.go  server.go  stratego_server.go
internal/web/apiadapter/: BUILD.bazel  board.go  game.go  move.go  piece.go  position.go  util.go
internal/web/stratego_rpc/: BUILD.bazel  deep_ping.go  get_game.go  list_games.go  long_ping.go  new_game.go  ping.go  plan_game.go  play_game.go  play_game_web.go  stratego_server.go  streaming.go  util.go
scripts/: build_protobuf.sh  sg_local.sh
test/sg_local/: redis.test.docker-compose.yaml
