"strate-go model"

module(
    name = "strate-go",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.41.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.32.0", repo_name = "bazel_gazelle")

bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "grpc", version = "1.48.1")

bazel_dep(name = "rules_license", version = "0.0.7")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_aidarkhanov_nanoid",
    "com_github_rs_zerolog",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
