load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "play.go",
        "root.go",
        "serve.go",
    ],
    importpath = "github.com/cBiscuitSurprise/strate-go/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/web",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
