load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = [
        "data.go",
        "ttl_cache.go",
    ],
    importpath = "github.com/cBiscuitSurprise/strate-go/internal/storage",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/game"],
)
