load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "web",
    srcs = [
        "logging.go",
        "server.go",
    ],
    importpath = "github.com/cBiscuitSurprise/strate-go/internal/web",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/web/stratego_rpc",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
    ],
)
