load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "convert",
    srcs = ["position.go"],
    importpath = "github.com/cBiscuitSurprise/strate-go/internal/web/convert",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/proto:strategopb",
        "//internal/game",
    ],
)

go_library(
    name = "apiadapter",
    srcs = ["position.go"],
    importpath = "github.com/cBiscuitSurprise/strate-go/internal/web/apiadapter",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/proto:strategopb",
        "//internal/game",
    ],
)
