load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stratego_rpc",
    srcs = [
        "deep_ping.go",
        "long_ping.go",
        "new_game.go",
        "ping.go",
        "plan_game.go",
        "play_game.go",
        "stratego_server.go",
    ],
    importpath = "github.com/cBiscuitSurprise/strate-go/internal/web/stratego_rpc",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/proto:strategopb",
        "//internal/core",
        "//internal/game",
        "//internal/pieces",
        "//internal/storage",
        "//internal/util",
        "//internal/web/apiadapter",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
